<resources>
    <string name="app_name">My library</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="app_version">Version: 1.0.3</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="book_cover">Book\'s Cover</string>
    <string name="select_image">Select \nimage</string>
    <string name="select_categories">Select \ncategories</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description_optional">Description (optional)</string>
    <string name="pages">Pages</string>
    <string name="chapters_name">Chapter\'s name</string>
    <string name="chapter_number">Chapter number:</string>
    <string name="marker_type">Marker Type</string>
    <string name="note">Note</string>
    <string name="add_quote">Add Quote</string>
    <string name="quote_title_optional">Quote title (optional)</string>
    <string name="author_optional">Author (optional)</string>
    <string name="quotation_text">Quotation text</string>
    <string name="page">Page:</string>
    <string name="category_name">Category\'s name</string>
    <string name="select_color">Select color</string>
    <string name="select_book_cover">Select book\'s cover</string>
    <string name="mateusz_pietras_xezolpl" translatable="false">Mateusz Pietras \'XezolPL\'</string>
    <string name="app_description">Simple application for your books  management, making clear notes and writing  quotes.</string>
    <string name="category_image">Category image</string>
    <string name="placeholder_quote_title" translatable="false">Very long title placeholder</string>
    <string name="placeholder_quote_author" translatable="false">An author and the second one</string>
    <string name="placeholder_page" translatable="false">Page: 1234</string>
    <string name="placeholder_quote_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed bibendum et sapien id facilisis. Duis mattis ornare dictum. Duis pulvinar condimentum rutrum. . Duis mattis ornare dictum. Duis pulvinar condimentum rutrum.</string>
    <string name="category_name_background">Category name background</string>
    <string name="placeholder_book_title" translatable="false">Funny book</string>
    <string name="placeholder_category">Category</string>
    <string name="placeholder_chapter" translatable="false">Chapter I: The beginning</string>
    <string name="placeholder_book_author">An author of the book</string>
    <string name="very_long_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consLorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tortor diam. Sed id lorem ut odio vulputate mollis sed sed libero. Morbi in erat ac tellus sagittis facilisis. Nullam non interdum enim, vel ultrices sem. Maecenas laoreet massa et mi dapibus, sed interdum dolor cursus. Curabitur id placerat diam. In bibendum ipsum nec quam eleifend aliquet. Quisque leo felis, tempus eu urna ut, tempor sollicitudin lectus. Fusce in augue leo.Suspendisse imperdiet porta sem a porta. Pellentesque ullamcorper venenatis felis sed ornare. Cras ut orci eu dui accumsan suscipit vel ac purus. Nullam metus augue, condimentum non turpis in, rhoncus suscipit lacus. Duis mauris mi, mollis efficitur purus rutrum, ultricies egestas lorem. Phasellus rutrum ipsum eget mi vehicula aliquet. Vestibulum scelerisque erat sed est feugiat, vitae tempus augue mattis. Integer tempor, ligula vitae commodo aliquam, massa neque iaculis elit, vitae suscipit orci velit at lectus. Vivamus varius volutpat malesuada. Aenean ut iaculis magna, vitae pharetra quam. Sed ligula massa, feugiat ac maximus eget, sagittis et arcu. Sed volutpat consequat augue ut sollicitudin. Donec ac dui nisi. Sed vel lacus ut quam vestibulum malesuada. Proin mollis velit at sollicitudin molestie.ectetur adipiscing elit. Aenean vitae tortor diam. Sed id lorem ut odio vulputate mollis sed sed libero. Morbi in erat ac tellus sagittis facilisis. Nullam non interdum enim, vel ultrices sem. Maecenas laoreet massa et mi dapibus, sed interdum dolor cursus. Curabitur id placerat diam. In bibendum ipsum nec quam eleifend aliquet. Quisque leo felis, tempus eu urna ut, tempor sollicitudin lectus. Fusce in augue leo.Suspendisse imperdiet porta sem a porta. Pellentesque ullamcorper venenatis felis sed ornare. Cras ut orci eu dui accumsan suscipit vel ac purus. Nullam metus augue, condimentum non turpis in, rhoncus suscipit lacus. Duis mauris mi, mollis efficitur purus rutrum, ultricies egestas lorem. Phasellus rutrum ipsum eget mi vehicula aliquet. Vestibulum scelerisque erat sed est feugiat, vitae tempus augue mattis. Integer tempor, ligula vitae commodo aliquam, massa neque iaculis elit, vitae suscipit orci velit at lectus. Vivamus varius volutpat malesuada. Aenean ut iaculis magna, vitae pharetra quam. Sed ligula massa, feugiat ac maximus eget, sagittis et arcu. Sed volutpat consequat augue ut sollicitudin. Donec ac dui nisi. Sed vel lacus ut quam vestibulum malesuada. Proin mollis velit at sollicitudin molestie.</string>
    <string name="want_to_read">Want to read</string>
    <string name="currently_reading">Currently reading</string>
    <string name="already_read">Already read</string>
    <string name="add_category">Add category</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="without_quotes">Without quotes</string>
    <string name="onAlreadyRead">You have already read this book. Do you want to remove it from the already read list?</string>
    <string name="onCurrReading">Your are currently reading this book. Do you want to remove it from the currently reading list?</string>
    <string name="onWantToRead">This book is currently in to read list. Do you want to remove it from the list?</string>
    <string name="status_change">Change status</string>
    <string name="successfully_changed_status">Successfully changed the book status.</string>
    <string name="del_book">Delete book</string>
    <string name="delete_book_1">Delete book:</string>
    <string name="delete_book_2">from your library? It will remove also all notes. Delete with quotes?</string>
    <string name="del_quote_category">Delete quote category</string>
    <string name="delete_quote_category">Delete quote category? Everywhere that category was used, quote category will be changed on \"uncategorized\".</string>
    <string name="del_quote">Delete quote</string>
    <string name="delete_quote">Delete this quote? It will not delete its category.</string>
    <string name="del_chapter">Delete chapter</string>
    <string name="delete_chapter">Delete this chapter? It will delete all its notes?</string>
    <string name="delete_chapter_short">Delete chapter</string>
    <string name="del_note">Delete note</string>
    <string name="delete_note">Delete this note? It will delete all its notes?</string>
    <string name="exit_app">Click again to exit the application.</string>
    <string name="book_title_author">Book\'s title or/and author</string>
    <string name="more">More</string>
    <string name="no_more_covers">No more covers in database. If you cannot find suitable cover, you can take a photo of your book.</string>
    <string name="no_covers_found">No covers found.</string>
    <string name="adding_cover_error">Could not successfully add the cover, please try again.</string>
    <string name="lets_read">Let\'s read</string>
    <string name="recognition_error">Sorry, something went wrong. If you use custom camera application - try to use device\'s default. If it won\'t help, probably your device is unsupported by the application.</string>
    <string name="add_note">Add note</string>
    <string name="edit_chapter">Edit chapter</string>
    <string name="insert_quote">Insert quote</string>
    <string name="categories">Categories</string>
    <string name="quotes">Quotes</string>
    <string name="settings">Settings</string>
    <string name="contact_and_about">Contact and about</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note_short">Delete note</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="all_books">All books</string>
    <string name="chapters_notes">Chapters and Notes</string>
    <string name="type_pages_as_a_number">Type pages as a number.</string>
    <string name="type_it_as_a_number">Type it as a number.</string>
    <string name="chapter_name_empty">Chapter\'s name cannot be empty!</string>
    <string name="note_empty">Note can\'t be empty!</string>
    <string name="basic_category">Its basic category, you cannot edit or delete it.</string>
    <string name="quote_short">Quote can\'t be that short.</string>
    <string name="category_empty">Category\'s name cannot be empty.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="book_details">Book\'s details</string>
    <string name="book_notes">Book\'s notes</string>
    <string name="backup">Backup</string>
    <string name="backup_off">After the app reinstall you won\'t be able to recover data if you haven\'t exported the database</string>
    <string name="backup_title">Create backup automatically</string>
    <string name="backup_on">The backup will be created on your google account every app closing</string>
    <string name="theme">Theme</string>
    <string name="standard">Standard</string>
    <string name="mild">Mild</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="language">Language</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="export_db">Export database</string>
    <string name="import_db">Import database</string>
    <string name="restore_db_fail">Unable to restore database. You chose wrong database file or the file is damaged.</string>
    <string name="no_books">No books here</string>
    <string name="db_restore_unknown_error">Something got wrong during importing process.</string>
    <string name="db_restore_success">Successfully restored the database.</string>
    <string name="export_db_success">Successfully exported the database</string>
    <string name="export_db_fail">Exporting the database failed.</string>
    <string name="chose_directory_db_fail">You\'ve chosen wrong directory to export database. Please try again, maybe by other file manager?</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="short_title">Too short title.</string>
    <string name="help">Help</string>
    <string name="open_tutorial">Open tutorial</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="private_policy_link" translatable="false">https://mylibrary.flycricket.io/privacy.html</string>
    <string name="customization">Personalization</string>
    <string name="randomize_colors">Randomize colors</string>
    <string name="auto_pick_colors">Automatically pick random color inside the notes</string>
</resources>