<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:defaultValue="@string/english"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="lang"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_language_black_24dp"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme">

        <ListPreference
            app:defaultValue="@string/light"
            app:entries="@array/themes"
            app:entryValues="@array/themes_values"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_collections_black_24dp"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization">

        <CheckBoxPreference
            android:key="isRandomColorPickingEnabled"
            android:defaultValue="false"
            android:title="@string/randomize_colors"
            android:icon="@drawable/ic_color_lens_black_32dp"
            android:summary="@string/auto_pick_colors"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup">

        <Preference
            android:key="import"
            android:title="@string/import_db"
            android:icon="@drawable/ic_cloud_download_black_24dp"/>
        <Preference
            android:key="export"
            android:title="@string/export_db"
            android:icon="@drawable/ic_backup_black_24dp"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help">

        <Preference
            android:key="tutorial"
            app:title="@string/open_tutorial"
            android:icon="@drawable/ic_help_black_24dp"/>

    </PreferenceCategory>

</PreferenceScreen>
