<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/all_books"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/ic_format_quote_black_24dp"
            android:title="@string/quotes" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/contact_and_about" />
    </group>

</menu>