<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title=""
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/favourite"
                android:icon="@mipmap/favourite_star"
                android:title="@string/add_to_favourites" />

            <item android:id="@+id/toRead"
                android:icon="@mipmap/to_read_icon"
                android:title="@string/want_to_read"/>

            <item android:id="@+id/currReading"
                android:icon="@mipmap/curr_reading_icon"
                android:title="@string/currently_reading"/>

            <item android:id="@+id/alreadyRead"
                android:icon="@mipmap/already_read_icon"
                android:title="@string/already_read"/>
        </menu>
    </item>
</menu>