<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:excludeFromRecents="true">

    <ImageView
        android:id="@+id/add_note_imgView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/marker_type"/>

    <com.github.nikartm.button.FitButton
        android:id="@+id/add_note_color_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_toEndOf="@id/add_note_imgView"
        android:layout_marginTop="41.5dp"

        app:fb_icon="@drawable/ic_color_lens_black_32dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/add_note_name"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_note_imgView"
        android:textAlignment="center"
        android:maxLength="100"
        android:hint="@string/note"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|textCapSentences"
        app:met_underlineColor="#666666"
        app:met_textColor="#545454"
        app:met_textColorHint="#545454"/>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.github.nikartm.button.FitButton
            android:id="@+id/ok_btn"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"

            app:fb_backgroundColor="#ed0909"
            app:fb_cornerRadius="15dp"
            app:fb_divColor="#fff"
            app:fb_divHeight="25dp"
            app:fb_divWidth="1dp"
            app:fb_icon="@drawable/ic_check_black_24dp"
            app:fb_iconColor="#FFF"
            app:fb_iconHeight="20dp"
            app:fb_iconMarginEnd="10dp"
            app:fb_iconMarginStart="10dp"
            app:fb_iconPosition="left"
            app:fb_iconWidth="32dp"
            app:fb_text="@string/ok"
            app:fb_textColor="#FFF"
            app:fb_textPaddingStart="20dp" />

        <com.github.nikartm.button.FitButton
            android:id="@+id/cancel_btn"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"

            app:fb_backgroundColor="#ed0909"
            app:fb_cornerRadius="15dp"
            app:fb_divColor="#fff"
            app:fb_divHeight="25dp"
            app:fb_divWidth="1dp"
            app:fb_icon="@drawable/ic_close_black_24dp"
            app:fb_iconColor="#FFF"
            app:fb_iconHeight="20dp"
            app:fb_iconMarginEnd="10dp"
            app:fb_iconMarginStart="10dp"
            app:fb_iconPosition="left"
            app:fb_iconWidth="32dp"
            app:fb_text="@string/cancel"
            app:fb_textColor="#FFF"
            app:fb_textPaddingStart="15dp" />
    </LinearLayout>
</RelativeLayout>